--- a/src/components/loadMoreBtn/LoadMoreBtn.module.css
+++ b/src/components/loadMoreBtn/LoadMoreBtn.module.css
@@ -1,4 +1,4 @@
-.loadMoreBtnContainer {
+/* .loadMoreBtnContainer {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,4 +8,26 @@
   height: 42px;
   width: 150px;
   margin-bottom: 20px;
+} */
+
+/* LoadMoreBtn.module.css */
+
+.loadMoreBtnContainer {
+  text-align: center;
+}
+
+.loadMoreBtn {
+  padding: 10px 20px;
+  background-color: #61dafb;
+  border: none;
+  margin-bottom: 30px;
+  border-radius: 5px;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.loadMoreBtn:hover {
+  background-color: #21a1f1;
 }
